--- a/Invessence/modules/web/src/main/webapp/pages/consumer/invessence/cadd.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/invessence/cadd.xhtml
@@ -364,10 +364,10 @@
                                      style="border:0px !important; background:none;"
                                      class="FormContent">
                             <div class="Wid90">Desired Goal</div>
-                            <pe:inputNumber style="width: 80px"
+                            <p:inputNumber style="width: 80px"
                                             value="#{cepb.goalData.goalDesired}"
                                             maxlength="11" decimalPlaces="0" symbol="$">
-                            </pe:inputNumber>
+                            </p:inputNumber>
 
 
                             <div class="Wid90">Number of years when needed</div>
@@ -383,12 +383,12 @@
 
 
                             <div class="Wid90">Recurring investment</div>
-                            <pe:inputNumber style="width: 80px"
+                            <p:inputNumber style="width: 80px"
                                             value="#{cepb.recurringInvestment}"
                                             maxlength="11" decimalPlaces="0" symbol="$">
                                 <p:ajax event="blur" listener="#{cepb.onChange}"
                                         update=":ceForm:workArea, :ceForm:graphArea"/>
-                            </pe:inputNumber>
+                            </p:inputNumber>
                             <h:outputText style="margin-left: 10px; color: red; font-weight: bold"
                                           rendered="#{cepb.displayGoalText}"
                                           value="#{cepb.goalAdjustment}">
