--- a/Invessence/modules/web/src/main/webapp/pages/custody/td/funding.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/custody/td/funding.xhtml
@@ -589,7 +589,7 @@
                                    process=":ctoForm:tdaccordian:fundTabV"/>
 
                     <div class="saveNopenBtn" style="text-align: right;">
-                        <p:commandButton value="Work Save" rendered="#{tdcto.tdMasterData.fundNow}"
+                        <p:commandButton value="Save" rendered="#{tdcto.tdMasterData.fundNow}"
                                          update=":ctoForm:tdaccordian, :ctoForm:errorMsg"
                                          actionListener="#{tdcto.nextPage}"
                                          process=":ctoForm:tdaccordian:fundTabV">
@@ -814,7 +814,7 @@
                                        actionListener="#{tdcto.prevPage}"
                                        update=":ctoForm:tdaccordian,:ctoForm:submitBtnId"  process="@this"/>
                             <div class="saveNopenBtn" style="text-align:right;">
-                                <p:commandButton value="Work Save"
+                                <p:commandButton value="Save"
                                                  update=":ctoForm:tdaccordian, :ctoForm:errorMsg"
                                                  actionListener="#{tdcto.nextPage}"
                                                  process=":ctoForm:tdaccordian:fundTabV">
