Spacing issue at top.

--- a/Invessence/modules/web/src/main/webapp/access-denied.xhtml
+++ b/Invessence/modules/web/src/main/webapp/access-denied.xhtml
@@ -9,6 +9,7 @@
         <h:form>
 
             <div id="layout-portlets-cover">
+                <div class="EmptyBox50"></div>
                 <div class="other-pages-box Container40 Responsive50 MarAuto Fnone TexAlCenter ShadowGray MarTop10"
                      style="margin-top:5%; background-image:url(/spark/resources/spark-layout/images/loginpageillust.svg); background-repeat:no-repeat; background-position:center; background-size:cover;">
                     <div class="Container90 Fnone MarAuto TexAlCenter">
