--- a/Invessence/modules/web/src/main/webapp/pages/common/notification.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/common/notification.xhtml
@@ -14,63 +14,34 @@
 
         <!-- BOX START -->
         <h:form id="form">
-        <div class="layout-portlets-box">
-            <div class="Container90 Responsive100">
-                <div class="ContainerIndent">
-                    <div class="Container100">
+            <div class="layout-portlets-box">
+                <div class="Container90 Responsive100">
+                    <div class="ContainerIndent">
+                        <div class="Container100">
 
-                        <p:growl id="noticeGrowl" showDetail="true" sticky="true" escape="true"/>
+                            <p:growl id="noticeGrowl" showDetail="true" sticky="true" escape="true"/>
 
-                            <div class="Wid50 Responsive50 Fleft">
+                            <div class="Wid100 Fleft">
                                 <h3 class="BigTopic"><h:outputText value="#{notificationBean.messageHeader}"/></h3>
                             </div>
 
-                        <div class="Container100 MarTop20">
-                            <div class="Container100 MarTop20">
-                                <div class="Fright Responsive50">
-                                    <p:selectOneButton value="#{notificationBean.filterNotice}">
-                                        <f:selectItem itemLabel="New" itemValue="N" />
-                                        <f:selectItem itemLabel="Archived" itemValue="A" />
-                                        <p:ajax update="@form" listener="#{notificationBean.filterData}" />
-                                    </p:selectOneButton>
-                                </div>
-                             </div>
-                             <div class="Container100 MarTop20">
-                            <p:dataTable id="messageDT" var="msg" value="#{notificationBean.notificationDataList}"
+                            <div class="Container100 MarTop5">
+                                <p:dataTable id="messageDT" var="msg" value="#{notificationBean.notificationDataList}"
                                              widgetVar="messageWidget"
                                              emptyMessage="No Messages were created."
                                              reflow="true">
-
-                                <f:facet name="header" style="text-align:left">
-                                    <p:outputPanel style="text-align:left">
-                                        <p:commandButton id="addButton" rendered="#{notificationBean.addAllowed}"
-                                                         styleClass="Fs16 BlueButton"
-                                                         icon="fa fa-plus Fs14 white"
-                                                         value="Add Task"
-                                                         onclick="PF('addNotification').show();"/>
-                                    </p:outputPanel>
-                                </f:facet>
 
                                     <p:column style="width: 1%; background-color: #{msg.color};">
                                         <h:outputText value=" "/>
                                     </p:column>
 
-                                    <p:column style="width: 5%;" styleClass="TextAlLeft">
+                                    <p:column style="width: 7%;" styleClass="TextAlLeft">
                                         <p:commandButton id="markButton" rendered="#{msg.status == 'N'}"
-                                                         styleClass="Fs16 BlueButton"
+                                                         styleClass="Fs16 BlueButton" title="Archive"
                                                          process="@this" immediate="true"
                                                          icon="fa fa-check Fs14 white"
-                                                         actionListener="#{notificationBean.markDone}">
-                                            <p:tooltip id="markToolTipFade" for="markButton" value="Archive" />
-                                            <f:setPropertyActionListener value="#{msg}"
-                                                                         target="#{notificationBean.selectedMessage}"/>
-                                        </p:commandButton>
-                                        <p:commandButton id="undoButton"  rendered="#{msg.status != 'N'}"
-                                                         styleClass="Fs16 GrayButton"
-                                                         process="@this" immediate="true"
-                                                         icon="fa fa-mail-reply Fs14 white"
-                                                         actionListener="#{notificationBean.markUnDone}">
-                                            <p:tooltip id="undoToolTipFade" for="undoButton" value="Undo Archive" />
+                                                         actionListener="#{notificationBean.markRead}"
+                                                         update="@form">
                                             <f:setPropertyActionListener value="#{msg}"
                                                                          target="#{notificationBean.selectedMessage}"/>
                                         </p:commandButton>
@@ -88,52 +59,15 @@
                                     </p:column>
 
                                 </p:dataTable>
-                             </div>
+                            </div>
                         </div>
                     </div>
                 </div>
+
+                <!-- Can add another element here... -->
             </div>
+            <!-- BOX END -->
 
-            <!-- Can add another element here... -->
-        </div>
-        <!-- BOX END -->
-
-            <p:dialog widgetVar="addNotification" header="Notification Details"
-                      showEffect="clip" hideEffect="clip">
-                <h:panelGrid id="noticeDetail" columns="2">
-
-                    <p:outputLabel for="priority" value="Priority" />
-                    <p:selectOneMenu id="priority" value="#{notificationBean.notificationData.noticetype}"
-                                     style="width:125px"
-                                     required="true">
-                        <f:selectItem itemLabel="Select One" itemValue="" />
-                        <f:selectItem itemLabel="High" itemValue="1" />
-                        <f:selectItem itemLabel="Middle" itemValue="2" />
-                        <f:selectItem itemLabel="Low" itemValue="3" />
-                    </p:selectOneMenu>
-
-                    <p:outputLabel for="businessdate" value="Business Date:" />
-                        <p:calendar id="businessdate" value="#{notificationBean.notificationData.javaDate}"
-                                    timeZone="GMT-5" pattern="MM/dd/yyyy HH:mm"
-                                    required="true" showOn="button"/>
-
-
-                    <p:outputLabel for="message" value="Message" />
-                    <p:inputTextarea id="message" value="#{notificationBean.notificationData.message}"
-                                     required="true"
-                                     rows="5" cols="30" counter="display" maxlength="120"
-                                     counterTemplate="{0} characters remaining." autoResize="true" />
-
-                    <h:outputText value="" />
-                    <h:outputText id="display" />
-
-                    <p:commandButton type="reset" value="Reset" styleClass="Fleft"/>
-                    <p:commandButton styleClass="Fright"
-                                     value="Save"
-                                     actionListener="#{notificationBean.saveNotification}"
-                                     oncomplete="PF('addNotification').hide();"/>
-                </h:panelGrid>
-            </p:dialog>
         </h:form>
 
 
