--- a/Invessence/modules/web/src/main/webapp/pages/advisor/alist.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/advisor/alist.xhtml
@@ -106,7 +106,7 @@
                             </p:column>
                             <p:column sortBy="#{managedVar.invested}"
                                       headerText="Capital($)"
-                                      styleClass="ListOfAccntsColWidth"
+                                      styleClass="ListOfAccntsColWidth num-text-align invest"
                                       resizable="true">
                                 <h:outputText styleClass="dashboardUsrColumnFloatRight" value="#{managedVar.invested}">
                                     <f:convertNumber currencySymbol="$" type="currency"/>
