--- a/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/core0.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/core0.xhtml
@@ -40,12 +40,12 @@
             </p:spinner>
 
             <div class="Wid90">Initial investment</div>
-            <pe:inputNumber id="initialInvestment" styleClass="Wid90"
+            <p:inputNumber id="initialInvestment" styleClass="Wid90"
                             value="#{uobpb.initialInvestment}"
                             maxlength="11" decimalPlaces="0" symbol="$">
                 <p:ajax event="blur" listener="#{uobpb.onChangeValue}"
                         update=":ceForm:workArea, :ceForm:displayInvestment, :ceForm:graphArea"/>
-            </pe:inputNumber>
+            </p:inputNumber>
 
         </p:panelGrid>
     </div>
