--- a/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/cadd/page1B.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/cadd/page1B.xhtml
@@ -9,7 +9,7 @@
         <p:panel id="editPage1" style="border: 0px; background: transparent;">
             <div class="Container100 TextAlCenter">
                 <div class="TexAlCenter">
-                    <h1 class="black Fs20 fnt1">#{ceb.firstname}, your current portfolio is:</h1>
+                    <h1 class="black Fs20 fnt1">#{tcmpb.firstname}, your current portfolio is:</h1>
                 </div>
 
                 <table class="Container100  TextAlCenter">
@@ -17,7 +17,7 @@
                         <td colspan="2" class="TexAlCenter">
                             <div class="DispInlBlock TexAlLeft tp1">
                                 <div class="Fright">
-                                    <h1 class="black Fs24 fnt1">#{ceb.origCustomerData.themeData.displayname}</h1>
+                                    <h1 class="black Fs24 fnt1">#{tcmpb.origCustomerData.themeData.displayname}</h1>
                                 </div>
                             </div>
                         </td>
@@ -26,15 +26,15 @@
                         <td colspan="2" class="TexAlCenter">
                             <div class="DispInlBlock TexAlLeft tp1">
                                 <div class="Fright">
-                                    <h2 class="black f1 textAlign">#{ceb.origCustomerData.themeData.longDescription}</h2>
+                                    <h2 class="black f1 textAlign">#{tcmpb.origCustomerData.themeData.longDescription}</h2>
                                 </div>
                             </div>
                         </td>
                     </tr>
                     <tr>
                         <td>
-                            <p:chart type="pie" model="#{ceb.origCustomerData.pieChart}"
-                                     rendered="#{ceb.origCustomerData.pieChart != null}"
+                            <p:chart type="pie" model="#{tcmpb.origCustomerData.pieChart}"
+                                     rendered="#{tcmpb.origCustomerData.pieChart != null}"
                                      style="width:100%;height:210px;"
                                      responsive="true">
                             </p:chart>
@@ -53,7 +53,7 @@
                 <div class="EmptyBox20"></div>
 
                 <div class="Fs12">
-                    <p:selectOneRadio value="#{ceb.formula}"
+                    <p:selectOneRadio value="#{tcmpb.formula}"
                                       layout="pageDirection"
                                       required="true" requiredMessage="Must choose one of the method to change profile.">
                         <f:selectItem
@@ -76,10 +76,10 @@
                 <p:commandButton styleClass="Fleft" value="Cancel"
                                  update=":ceForm:contentpanel,:ceForm:disclaimer"
                                  immediate="true"
-                                 actionListener="#{ceb.exitPage}"/>
+                                 actionListener="#{tcmpb.exitPage}"/>
                 <p:commandButton styleClass="Fright" value="Continue"
                                  update=":ceForm:contentpanel,:ceForm:disclaimer"
-                                 actionListener="#{ceb.nextPage}"/>
+                                 actionListener="#{tcmpb.nextPage}"/>
             </f:facet>
         </p:panel>
     </div>
