--- a/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/signup.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/signup.xhtml
@@ -59,7 +59,7 @@
 
                                 <f:facet name="footer">
                                     <div class="Container100" style="text-align: center;">
-                                        <p:commandButton value="Open Account" type="submit"
+                                        <p:commandButton value="Register" type="submit"
                                                          update="@form, signmsg"
                                                          actionListener="#{userBean.simpleSignup}"/>
                                     </div>
