--- a/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/cadd/p3.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/cadd/p3.xhtml
@@ -29,13 +29,20 @@
             </div>
 
         <div class="EmptyBox5"></div>
-         <p:panel rendered="#{tcmpb.pagemanager.getErrorMessage(1) != null}"
+         <p:panel rendered="#{tcmpb.pagemanager.getErrorMessage(1) != null  and  !tcmpb.formPortfolioEdit }"
                   style="border: 0px; background: transparent"
                   styleClass="Container100">
              <h:outputText styleClass="errorText"
                            value="#{tcmpb.pagemanager.getErrorMessage(1)}" escape="false"/>
              <div class="EmptyBox5"></div>
          </p:panel>
+            <p:panel rendered="#{tcmpb.pagemanager.getErrorMessage(2) != null  and  tcmpb.formPortfolioEdit }"
+                     style="border: 0px; background: transparent"
+                     styleClass="Container100">
+                <h:outputText styleClass="errorText"
+                              value="#{tcmpb.pagemanager.getErrorMessage(2)}" escape="false"/>
+                <div class="EmptyBox5"></div>
+            </p:panel>
         <p:commandLink styleClass="UI-prevButton Fleft" value="Previous" rendered="#{tcmpb.pagemanager.prevButtonStat}"
                          update=":ceForm:inputArea"
                          immediate="true"
