--- a/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/cadd/page8.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/cadd/page8.xhtml
@@ -25,7 +25,7 @@
         <div class="EmptyBox10"></div>
         <div class="Container100 Fs16">
             <p:scrollPanel mode="native" style="width:100%;height:500px">
-		<br/>
+                <br/>
                 <h1 class="TexAlCenter Fs18">RESPONSIBILITIES OF REGISTERED USERS ELIGIBLE FOR TRANSACTION PROCESSING</h1>
 
                 <p style="font-size: 15px;">
@@ -126,12 +126,12 @@
         </div>
         <div class="EmptyBox20"></div>
         <div class="Container100 Fs18">
-            <p:selectOneRadio value="#{ceb.acceptterms}"
-                 layout="pageDirection"
-                 required="true" requiredMessage="Must choose one of the terms!"
-                 >
-                <p:ajax listener="#{ceb.onTermChange}"
-                        update=":ceForm:contentpanel"/>
+            <p:selectOneRadio value="#{tcmpb.acceptterms}"
+                              layout="pageDirection"
+                              required="true" requiredMessage="Must choose one of the terms!"
+            >
+                <p:ajax listener="#{tcmpb.onTermChange}"
+                        update=":ceForm:inputArea"/>
                 <f:selectItem
                         itemLabel="I have read, reviewed and understand the applicable prospectus of the Fund(s) and accept the terms and conditions described above."
                         itemValue="Y"/>
@@ -144,14 +144,14 @@
         <div class="EmptyBox20"></div>
 
         <div class="Container100 TexAlCenter">
-            <p:commandButton styleClass="Fleft" value="Previous" rendered="#{ceb.pagemanager.prevButtonStat}"
-                             update=":ceForm:contentpanel,:ceForm:disclaimer"
+            <p:commandButton styleClass="Fleft" value="Previous" rendered="#{tcmpb.pagemanager.prevButtonStat}"
+                             update=":ceForm:inputArea"
                              immediate="true"
-                             actionListener="#{ceb.prevPage}"/>
-            <p:commandButton styleClass="Fright" value="Next" disabled="#{ceb.acceptterms != 'Y'}"
-                             update=":ceForm:contentpanel,:ceForm:disclaimer"
+                             actionListener="#{tcmpb.prevPage}"/>
+            <p:commandButton styleClass="Fright" value="Next" disabled="#{tcmpb.acceptterms != 'Y'}"
+                             update=":ceForm:inputArea"
                              process="@this" immediate="true"
-                             actionListener="#{ceb.agreeTerms}">
+                             actionListener="#{tcmpb.agreeTerms}">
             </p:commandButton>
         </div>
 
