--- a/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/cadd/page9.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/cadd/page9.xhtml
@@ -9,13 +9,13 @@
         <div class="ContainerIndent">
 	    <div class="Fs16 textAlign">
             You are about to make an exchange from
-            <span style="text-decoration: underline;">#{ceb.origCustomerData.themeData.displayname}</span>
+            <span style="text-decoration: underline;"></span>
             in the amount of
-            <h:outputText value="#{ceb.investment}">
+            <h:outputText value="#{tcmpb.investment}">
                <f:convertNumber currencySymbol="$" type="currency"/>
             </h:outputText>
             to the
-            <span style="text-decoration: underline;">#{ceb.themeData.displayname}</span>
+            <span style="text-decoration: underline;"></span>
             indicated below for the corresponding account
 	    </div>
             <div class="EmptyBox20"></div>
@@ -28,9 +28,9 @@
                 </thead>
                 <tbody>
                 <tr>
-                    <td class="TexAlLeft" style="width: 75%">#{ceb.themeData.securityname}</td>
+                    <td class="TexAlLeft" style="width: 75%"></td>
                     <td class="TexAlRight" style="width: 25%">
-                        <h:outputText value="#{ceb.investment}">
+                        <h:outputText value="#{tcmpb.investment}">
                             <f:convertNumber currencySymbol="$" type="currency"/>
                         </h:outputText>
                     </td>
@@ -38,7 +38,7 @@
                 <tr style="background: #f5f5f5">
                     <td class="TexAlRight" style="width: 75%">Total</td>
                     <td class="TexAlRight" style="width: 25%">
-                        <h:outputText value="#{ceb.investment}">
+                        <h:outputText value="#{tcmpb.investment}">
                             <f:convertNumber currencySymbol="$" type="currency"/>
                         </h:outputText>
                     </td>
@@ -46,13 +46,13 @@
                 </tbody>
             </table>
             <div class="EmptyBox20"></div>
-            <p:commandButton value="Cancel" rendered="#{ceb.pagemanager.prevButtonStat}"
-                             update=":ceForm:contentpanel,:ceForm:disclaimer"
+            <p:commandButton value="Cancel" rendered="#{tcmpb.pagemanager.prevButtonStat}"
+                             update=":ceForm:inputArea"
                              immediate="true"
-                             actionListener="#{ceb.exitPage}"/>
+                             actionListener="#{tcmpb.exitPage}"/>
             <p:commandButton styleClass="Fright" value="Accept"
-                             update=":ceForm:contentpanel,:ceForm:disclaimer"
-                             actionListener="#{ceb.processTransfer}"/>
+                             update=":ceForm:inputArea"
+                             actionListener="#{tcmpb.processTransfer}"/>
 
         </div>
     </div>
