--- a/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/cadd/portfolioConfirmation.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/cadd/portfolioConfirmation.xhtml
@@ -17,7 +17,7 @@
                         <td colspan="2" class="TexAlCenter">
                             <div class="DispInlBlock TexAlLeft tp1">
                                 <div class="Fright">
-                                    <h1 class="black Fs24 fnt1">#{tcmpb.origCustomerData.themeData.displayname}</h1>
+                                    <h1 class="black Fs24 fnt1"></h1>
                                 </div>
                             </div>
                         </td>
@@ -26,20 +26,12 @@
                         <td colspan="2" class="TexAlCenter">
                             <div class="DispInlBlock TexAlLeft tp1">
                                 <div class="Fright">
-                                    <h2 class="black f1 textAlign">#{tcmpb.origCustomerData.themeData.longDescription}</h2>
+                                    <h2 class="black f1 textAlign"></h2>
                                 </div>
                             </div>
                         </td>
                     </tr>
-                    <tr>
-                        <td>
-                            <p:chart type="pie" model="#{tcmpb.origCustomerData.pieChart}"
-                                     rendered="#{tcmpb.origCustomerData.pieChart != null}"
-                                     style="width:100%;height:210px;"
-                                     responsive="true">
-                            </p:chart>
-                        </td>
-                    </tr>
+
                 </table>
 
                 <div class="EmptyBox10"></div>
@@ -74,11 +66,11 @@
 
             <f:facet name="footer">
                 <p:commandButton styleClass="Fleft" value="Cancel"
-                                 update=":ceForm:contentpanel,:ceForm:disclaimer"
+                                 update=":ceForm:inputArea"
                                  immediate="true"
                                  actionListener="#{tcmpb.exitPage}"/>
                 <p:commandButton styleClass="Fright" value="Continue"
-                                 update=":ceForm:contentpanel,:ceForm:disclaimer"
+                                 update=":ceForm:inputArea"
                                  actionListener="#{tcmpb.nextPage}"/>
             </f:facet>
         </p:panel>
