--- a/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/index.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/index.xhtml
@@ -58,6 +58,15 @@
                                         <f:setPropertyActionListener value="#{investment}"
                                                                      target="#{tcmdash.selectedAccount}"/>
                                     </p:commandButton>
+                                    <p:commandButton id="editPortfolioButton" rendered="#{investment.hasPosition}"
+                                                     styleClass="Fs14 GreenButton"
+                                                     process="@this" immediate="true"
+                                                     icon="fa fa-search-plus Fs14 white"
+                                                     action="#{tcmdash.doPortfolioSelectedAction}">
+                                        <p:tooltip id="portfolioToolTipFade" for="editPortfolioButton" value="Edit Portfolio"/>
+                                        <f:setPropertyActionListener value="#{investment}"
+                                                                     target="#{tcmdash.selectedAccount}"/>
+                                    </p:commandButton>
                                 </p:column>
                                 <!--
                                 <p:column styleClass="Wid25 TextAlLeft"
